fix(QMenu/QTooltip): Use margin-left/-top to reposition QMenu/QTooltip on iOS when viewport is zoomed to allow transitions #5955 (#6024)

--- a/ui/src/components/tooltip/QTooltip.sass
+++ b/ui/src/components/tooltip/QTooltip.sass
@@ -16,4 +16,5 @@
 
 body.platform-ios
   .q-tooltip
-    transform: translate(var(--q-vp-left), var(--q-vp-top))
+    margin-left: var(--q-vp-left, 0)
+    margin-top: var(--q-vp-top, 0)
